# my_demo_package_koktel131

./: README.md  demo_0.0.1.pyproj  my_demo_package.py  pyproject.toml
src/project/: main.py
